# service-optimization

./: .env.example  .gitignore  Dockerfile  pyproject.toml
app/: config.py  main.py
app/api/v1/: optimizar.py
app/application/: solver.py
app/domain/: models.py
app/infrastructure/: osrm_client.py
tests/: conftest.py  test_api.py  test_models.py  test_osrm_client.py  test_solver.py
